--- a/docs/Tutorials/SimpleScene.mdx
+++ b/docs/Tutorials/SimpleScene.mdx
@@ -1,40 +1,48 @@
 ### 🌍 Let's create a 3D world!
-___
+
+---
+
 The `SimpleScene` component is the easiest way to create a 3D space to start working.
 Let's start by importing Components and Three.js:
 
 ```js
-import * as THREE from 'three';
-import * as OBC from 'openbim-components';
+import * as THREE from "three";
+import * as OBC from "openbim-components";
 ```
+
 Now, the first step is getting a container for our viewer. 📦
 This is just a place where the 3D scene will be rendered.
 In this example we have just added an HTML `div` element with
 the ID `"container"`.
 
 ```js
-const container = document.getElementById('container');
+const container = document.getElementById("container");
 ```
+
 Now, let's create an awesome 3D scene inside that HTML element! 🔥
 :::info Are you using a library/framework like React, Angular or vue?
 Then probably you have other mechanisms for getting a reference to the
 HTML div element. However you do it, as long as you get a reference
 in your code, you are good to go!
 :::
+
 ### 🧰 Setting up a components project
-___
+
+---
+
 Next, we will instantiate the main object of the library: **[Components](../api/classes/components.Components)**. 🤖
 This object will keep track of all the components that you create, making them
 easily accessible in all your application and making sure to update them
 in each frame, so you don't have to worry about that. 💪
 :::danger The minimum components application
 Any components app needs 4 things to work:
+
 - 🌍 A **[scene component](../api/classes/components.SimpleScene)** where our objects will live in 3D.
 - ⌚ A **[renderer component](../api/classes/components.SimpleRenderer)** that allows us to see things moving around.
 - 🎥 A **[camera component](../api/classes/components.SimpleCamera)** that defines where we are and in that 3D world.
 - ⚡ A **[raycaster component](../api/classes/components.SimpleRaycaster)** that makes it possible to interact with
-that 3D scene with our mouse / touch.
-:::
+  that 3D scene with our mouse / touch.
+  :::
 
 ```js
 const components = new OBC.Components();
@@ -43,6 +51,7 @@ components.renderer = new OBC.SimpleRenderer(components, container);
 components.camera = new OBC.SimpleCamera(components);
 components.raycaster = new OBC.SimpleRaycaster(components);
 ```
+
 Now that everything is set up, let's start the app! You can do that with the `init` method.
 It will start updating all the components at 60 fps, so that you don't have to worry about the
 animation loop: 🚗💨💨💨
@@ -50,6 +59,7 @@ animation loop: 🚗💨💨💨
 ```js
 components.init();
 ```
+
 And that's it! You already have set up 3D scene that can run on any device. Easy, right? 🥳 But right now or scene
 is not very interesting, as it's only a infinite white void. Let's add some things to it! First, we need a reference
 to the scene, which you can get with the `get()` method. This method is present in all the components and is used to
@@ -58,8 +68,11 @@ get the core of the component. We can do it like this:
 ```js
 const scene = components.scene.get();
 ```
+
 ### 🎥 Adjusting scene and camera
-___
+
+---
+
 Great! Now we will locate the camera in a nice starting position. We can control the `SimpleCamera` component through its
 `controls` attribute. This object is an instance of the [camera-controls](https://github.com/yomotsu/camera-controls)
 library, which makes it super easy to control the camera in our 3D scene. We will set the position of the camera
@@ -68,8 +81,11 @@ to `[10, 10, 10]` and make it look at the origin (`[0, 0, 0]`).
 ```js
 components.camera.controls.setLookAt(10, 10, 10, 0, 0, 0);
 ```
+
 ### 🏀 Adding some 3D objects
-___
+
+---
+
 Awesome! We are now ready to start adding some objects. First, we will add a
 **[simple grid component](../api/classes/components.SimpleGrid)**. As the name implies, this component adds a simple
 2D grid to the scene that we can use as a reference.
@@ -77,27 +93,34 @@ Awesome! We are now ready to start adding some objects. First, we will add a
 ```js
 const grid = new OBC.SimpleGrid(components);
 ```
+
 🚀 Also, let's add some real geometry to our small 3D app. All the components are built on top of
 [Three.js](https://threejs.org/), which means that Three.js code will work natively with them.
 This is great, because you can easily integrate components with any 3D app that you create.
 Let's try it by adding a simple cube:
 
 ```js
-const boxMaterial = new THREE.MeshStandardMaterial({ color: '#6528D7' });
+const boxMaterial = new THREE.MeshStandardMaterial({ color: "#6528D7" });
 const boxGeometry = new THREE.BoxGeometry(3, 3, 3);
 const cube = new THREE.Mesh(boxGeometry, boxMaterial);
 cube.position.set(0, 1.5, 0);
 scene.add(cube);
 ```
+
 ### 🔦 Lighting things up
-___
+
+---
+
 Of course, everything is black because we have no lights! Let's fix it by adding some basic illumination:
 
 ```js
 components.scene.setup();
 ```
+
 ### 🧹 Cleaning up
-___
+
+---
+
 As you might now, JavaScript has an automatic garbage collector that gets rid of the variables that you are no longer
 using. Unfortunately, that's not the case for
 [Three.js](https://threejs.org/docs/#manual/en/introduction/How-to-dispose-of-objects). But don't worry: components
@@ -115,7 +138,4 @@ logic to fire when you re-render the component that has the 3D app.
 And voilà! You have made your first 3D application using components. Easy, right? Of course, this is still far from a
 full-fledged BIM app, but don't worry! Keep following our tutorials and your app will go from zero to hero in no time! 🚀
 
-
-  <iframe src="https://thatopen.github.io/engine_components/src/core/SimpleScene/index.html"></iframe>
-
-  
+<iframe src="https://thatopen.github.io/engine_components/src/core/SimpleScene/index.html"></iframe>
