--- a/docs/Tutorials/FragmentExploder.mdx
+++ b/docs/Tutorials/FragmentExploder.mdx
@@ -1,4 +1,5 @@
 ### 💣 Breaking down Model Dynamically
+
 You may have previously used the Simple Clipper component to dismantle a 3D models.
 Although Simple Clipper is fantastic for dissecting,
 there may be instances when you need to inspect the model while keeping it intact.🔧
@@ -7,8 +8,11 @@ At such times, Fragment Exploder is useful for giving you an exploded view of al
 👀 If you haven't started there, check out [that tutorial first](SimpleScene.mdx)!
 :::
 This tutorial will show you how to use **Fragment Exploder** for exploring BIM Models in detail.👓
+
 ### 🧩 Adding Fragments
+
 ---
+
 We'll start by adding a **Fragment** to our scene using [**FragmentManager**](../api/classes/components.FragmentManager).
 We'll use a simple fragment for the purposes of this tutorial, but the code is capable of handling big files as well.🏗️
 
@@ -19,17 +23,22 @@ const data = await file.arrayBuffer();
 const buffer = new Uint8Array(data);
 const model = await fragments.load(buffer);
 ```
+
 :::info Showing Fragments in the Scene
 🏔️ There is a dedicated tutorial on how to use Fragment Manager to load **IFC files**, checkout [that tutorial here](FragmentManager.mdx)!
 :::
+
 ### 🗂️ Strategically Classifying Fragments
+
 In this tutorial, we will deconstruct the model into floors. But before we explode them, we need to classify them by floor.
 For breaking down the model in the required way, we'll utilize [**FragmentClassifier**](../api/classes/components.FragmentClassifier).
 
 ```js
 const classifier = new OBC.FragmentClassifier(components);
 ```
+
 #### Getting Properties
+
 Fragment Classifier requires model properties that will help the classifier in identifying the floors included inside the Fragment.🧮
 We will fetch the properties from `json` file and store it in `model.properties`.
 
@@ -37,32 +46,41 @@ We will fetch the properties from `json` file and store it in `model.properties`
 const properties = await fetch("../../../resources/small.json");
 model.setLocalProperties(await properties.json());
 ```
+
 Now that we have the properties, we will pass the model to classifier and use `classifier.byStorey()` which will group the Fragments according to Floors.
 
 ```js
 classifier.byStorey(model);
 ```
+
 ### 💥 Exploding the Fragment
+
 Now that we've completed the setup, we'll use the `FragmentExploder` and send the **fragment** and **classifier** data to it.
 Our Fragment Exploder is now complete, and we can simply explode the model by calling [`exploder.explode()`](../api/classes/components.FragmentExploder.explode).💪
 
 ```js
 const exploder = new OBC.FragmentExploder(components);
 ```
+
 ### 🌡️ Screen Culling for Better Performance
+
 We will also add [Screen Culler](../api/classes/components.ScreenCuller) which will enhance the performance of our
 BIM App by removing Fragment elements that are not in our viewing area.
 
 ```js
 const culler = new OBC.ScreenCuller(components);
 culler.setup();
-container.addEventListener("mouseup", () => culler.elements.needsUpdate = true);
-container.addEventListener("wheel", () => culler.elements.needsUpdate = true);
-for(const fragment of model.items) {
-culler.elements.add(fragment.mesh);
+container.addEventListener(
+  "mouseup",
+  () => (culler.elements.needsUpdate = true),
+);
+container.addEventListener("wheel", () => (culler.elements.needsUpdate = true));
+for (const fragment of model.items) {
+  culler.elements.add(fragment.mesh);
 }
 culler.elements.needsUpdate = true;
 ```
+
 :::info Culling unnecessary Fragments
 🚅 If you're wondering how to add Screen Culler to your BIM app, we have a dedicated tutorial for it! Checkout [that tutorial here](ScreenCuller.mdx)!
 :::
@@ -70,7 +88,4 @@ culler.elements.needsUpdate = true;
 Your BIM App now has the power to deconstruct a model on a single click using **[Fragment Exploder](../api/classes/components.FragmentExploder)**😎
 Let's keep it up and check out another tutorial! 🎓
 
-
-  <iframe src="https://thatopen.github.io/engine_components/src/fragments/FragmentExploder/index.html"></iframe>
-
-  
+<iframe src="https://thatopen.github.io/engine_components/src/fragments/FragmentExploder/index.html"></iframe>
