--- a/docs/Tutorials/FragmentIfcLoader.mdx
+++ b/docs/Tutorials/FragmentIfcLoader.mdx
@@ -1,5 +1,7 @@
 ### 🏠👉🤖 From IFC to fragment in 1 minute
-___
+
+---
+
 Fragments are great: they are lightweight, they are fast and we
 have tons of tools to work with them. But fragments are not used
 outside our libraries. So how can we convert an IFC file to fragments?
@@ -9,6 +11,7 @@ Easy: with the `FragmentIfcLoader`! Let's start by creating it.
 let fragments = new OBC.FragmentManager(components);
 let fragmentIfcLoader = new OBC.FragmentIfcLoader(components);
 ```
+
 :::info Why not just IFC?
 IFC is nice because it lets us exchange data with many tools in the
 AECO industry. But it also has some limitations. In a nutshell,
@@ -25,26 +28,33 @@ button will give you all the features you need to load IFC files!
 Don't worry, we'll also do this programmatically in a moment.
 
 ```js
-const mainToolbar = new OBC.Toolbar(components, {name: 'Main Toolbar', position: 'bottom'});
+const mainToolbar = new OBC.Toolbar(components, {
+  name: "Main Toolbar",
+  position: "bottom",
+});
 components.ui.addToolbar(mainToolbar);
 const ifcButton = fragmentIfcLoader.uiElement.get("main");
 mainToolbar.addChild(ifcButton);
 ```
+
 ### 🔭🔧 Calibrating the converter
-___
+
+---
+
 Now, we need to configure the path of the WASM files. What's WASM?
 It's a technology that lets us run C++ on the browser, which means
 that we can load IFCs super fast! These files are the compilation of
 our `web-ifc` library. You can find them in the github repo and in NPM.
 These files need to be available to our app, so you have 2 options:
+
 - Download them and serve them statically.
 - Get them from a remote server.
-The easiest way is getting them from unpkg, and the cool thing is that 
-you don't need to do it manually! It can be done directly by the tool 
-just by writing the following:
+  The easiest way is getting them from unpkg, and the cool thing is that
+  you don't need to do it manually! It can be done directly by the tool
+  just by writing the following:
 
 ```js
-await fragmentIfcLoader.setup()
+await fragmentIfcLoader.setup();
 /* If you want to the path to unpkg manually, then you can skip the line 
 above and set them manually as below:
 fragmentIfcLoader.settings.wasm = {
@@ -52,19 +62,21 @@ path: "https://unpkg.com/web-ifc@0.0.50/",
 absolute: true
 } */
 ```
+
 Awesome! Optionally, we can exclude categories that we don't want
 to convert to fragments like very easily:
 
 ```js
 const excludedCats = [
-WEBIFC.IFCTENDONANCHOR,
-WEBIFC.IFCREINFORCINGBAR,
-WEBIFC.IFCREINFORCINGELEMENT,
+  WEBIFC.IFCTENDONANCHOR,
+  WEBIFC.IFCREINFORCINGBAR,
+  WEBIFC.IFCREINFORCINGELEMENT,
 ];
 for (const cat of excludedCats) {
-fragmentIfcLoader.settings.excludedCategories.add(cat);
+  fragmentIfcLoader.settings.excludedCategories.add(cat);
 }
 ```
+
 We can further configure the conversion using the `webIfc` object.
 In this example, we will make the IFC model go to the origin of
 the scene (don't worry, this supports model federation) and
@@ -75,8 +87,11 @@ efficient geometry for certain geometries (e.g. HVAC):
 fragmentIfcLoader.settings.webIfc.COORDINATE_TO_ORIGIN = true;
 fragmentIfcLoader.settings.webIfc.OPTIMIZE_PROFILES = true;
 ```
+
 ### 🚗🔥 Loading the IFC
-___
+
+---
+
 Next, let's define a function to load the IFC programmatically.
 We have hardcoded the path to one of our IFC files, but feel free
 to do this with any of your own files!
@@ -88,15 +103,18 @@ open local files.
 
 ```js
 async function loadIfcAsFragments() {
-const file = await fetch('../../../resources/small.ifc');
-const data = await file.arrayBuffer();
-const buffer = new Uint8Array(data);
-const model = await fragmentIfcLoader.load(buffer, "example");
-scene.add(model);
+  const file = await fetch("../../../resources/small.ifc");
+  const data = await file.arrayBuffer();
+  const buffer = new Uint8Array(data);
+  const model = await fragmentIfcLoader.load(buffer, "example");
+  scene.add(model);
 }
 ```
+
 ### 🎁 Exporting the result
-___
+
+---
+
 Once you have your precious fragments, you might want to save them
 so that you don't need to open this IFC file each time your user
 gets into your app. Instead, the next time you can load the
@@ -105,36 +123,40 @@ is as easy as this:
 
 ```js
 async function exportFragments() {
-if (!fragments.groups.length) return;
-const group = fragments.groups[0];
-const data = fragments.export(group);
-const blob = new Blob([data]);
-const fragmentFile = new File([blob], 'small.frag');
-const files = [];
-files.push(fragmentFile);
-const properties = group.getLocalProperties();
-if (properties) {
-files.push(new File([JSON.stringify(properties)], 'small.json'));
-}
-const result = await downloadZip(files).blob();
-result.name = 'example';
-download(result);
+  if (!fragments.groups.length) return;
+  const group = fragments.groups[0];
+  const data = fragments.export(group);
+  const blob = new Blob([data]);
+  const fragmentFile = new File([blob], "small.frag");
+  const files = [];
+  files.push(fragmentFile);
+  const properties = group.getLocalProperties();
+  if (properties) {
+    files.push(new File([JSON.stringify(properties)], "small.json"));
+  }
+  const result = await downloadZip(files).blob();
+  result.name = "example";
+  download(result);
 }
 ```
+
 Now, this is how the download function looks like:
 
 ```js
 function download(file) {
-const link = document.createElement('a');
-link.href = URL.createObjectURL(file);
-link.download = file.name;
-document.body.appendChild(link);
-link.click();
-link.remove();
+  const link = document.createElement("a");
+  link.href = URL.createObjectURL(file);
+  link.download = file.name;
+  document.body.appendChild(link);
+  link.click();
+  link.remove();
 }
 ```
+
 ### 🧠🧼 Cleaning memory
-___
+
+---
+
 Now, just like in the `FragmentManager` tutorial, you will need
 to dispose the memory if your user wants to reset the state of the
 scene, especially if you are using Single Page Application
@@ -143,15 +165,13 @@ can simply call the `dispose` method:
 
 ```js
 function disposeFragments() {
-fragments.dispose();
+  fragments.dispose();
 }
 ```
+
 That's it! Congrats, now you can load IFC files into your app,
 generate the 3D geometry and property data for them and navigate
 them in 3D. In other tutorials, you'll find tons of tools to
 work with them and create amazing BIM apps! See you there 💪
 
-
-  <iframe src="https://thatopen.github.io/engine_components/src/fragments/FragmentIfcLoader/index.html"></iframe>
-
-  
+<iframe src="https://thatopen.github.io/engine_components/src/fragments/FragmentIfcLoader/index.html"></iframe>
