--- a/docs/Tutorials/FragmentTree.mdx
+++ b/docs/Tutorials/FragmentTree.mdx
@@ -1,5 +1,7 @@
 ### 🌲 Gathering Structured Insights
+
 ---
+
 Building Information Modeling comprises nesting elements in multiple hierarchies.
 Working with this information might become complicated and irritating.🤯
 **Tree-View** is extremely effective in managing this volume of data.
@@ -8,8 +10,11 @@ Using **[Fragment Tree](../api/classes/components.FragmentTree)**, we have made 
 👀 If you haven't started there, check out [that tutorial first](SimpleScene.mdx)!
 :::
 In this lesson, we'll create a **Tree-View** for the items in the IFC file and zoom in on them when a node is clicked.
+
 ### 🧩 Adding Fragments
+
 ---
+
 We'll start by adding a **Fragment** to our scene using [**FragmentManager**](../api/classes/components.FragmentManager).
 We'll use a simple fragment for the purposes of this tutorial, but the code is capable of handling big files as well.🏗️
 
@@ -24,8 +29,11 @@ const data2 = await file2.arrayBuffer();
 const buffer2 = new Uint8Array(data2);
 const model2 = await fragments.load(buffer2);
 ```
+
 ### 🕹 Selection of Fragments
+
 ---
+
 Whenever you click on a `node` in **Tree-View**, that particular element would be highlighted.
 To create the highlight mechanism, we will use **[Fragment Highlighter](../api/classes/components.FragmentHighlighter)**
 that manages the material and selection intuitively.
@@ -34,10 +42,13 @@ that manages the material and selection intuitively.
 const highlighter = new OBC.FragmentHighlighter(components, fragments);
 highlighter.setup();
 ```
+
 :::info Highlighting Fragments
 🖱Check out **[FragmentHighlighter.mdx](FragmentHighlighter.mdx)** for a detailed tutorial on how to utilize Fragment Highlighter to conduct selection on **IFC files**!
 :::
+
 #### Adding Aesthetic Outlines
+
 Now that highlighter setup is done, we will add a nice outline effect when the elements are selected.
 
 ```js
@@ -45,7 +56,9 @@ components.renderer.postproduction.customEffects.outlineEnabled = true;
 highlighter.outlinesEnabled = true;
 highlighter.updateHighlight();
 ```
+
 ### 🗂️ Strategically Classifying Fragments
+
 In this tutorial, we will deconstruct the model in order to obtain a hierarchical view.💣
 To obtain a nested view, we must first classify them by **floors** and then by **type** entities.
 For breaking down the model in the required way, we'll utilize **[Fragment Classifier](../api/classes/components.FragmentClassifier)**.
@@ -53,7 +66,9 @@ For breaking down the model in the required way, we'll utilize **[Fragment Class
 ```js
 const classifier = new OBC.FragmentClassifier(components);
 ```
+
 #### Getting Properties
+
 Fragment Classifier requires model properties that will help the classifier in identifying the floors and entities included inside the Fragment.🧮
 We will fetch the properties from `json` file and store it in `model.properties`.
 
@@ -63,6 +78,7 @@ model.setLocalProperties(await properties.json());
 const properties2 = await fetch("../../../resources/small2.json");
 model2.setLocalProperties(await properties2.json());
 ```
+
 Now that we have the properties, we will pass the model to classifier and use `classifier.byStorey()` which will group the Fragments according to Floors.
 The model then needs to be classified according to entities using `classifier.byEntity()`.🗂
 
@@ -72,35 +88,44 @@ The model then needs to be classified according to entities using `classifier.by
 classifier.byStorey(model2);
 classifier.byEntity(model2);
 ```
+
 ### 🌱 Building Insightful Tree Views
+
 ---
+
 Now comes the interesting part, we will create **`FragmentTree`** using **components** and **classifier**.
 In addition, we will update the **Fragment Tree** to produce the Tree-View based on `storeys` and `entities`.
 
 ```js
 const modelTree = new OBC.FragmentTree(components);
 await modelTree.init();
-modelTree.update(['storeys', 'entities']);
+modelTree.update(["storeys", "entities"]);
 ```
+
 #### 🛎️ Managing Tree-View Events
+
 ---
+
 We will zoom in on the element that is selected in the Tree-View and add a nice highlight effect when the user hovers over a tree node.🖱
 Let's use `modelTree.onSelected` to get the active selection from Fragment Tree, and we will use `highlighter.highlightByID()` to zoom in.🔍
 
 ```js
 modelTree.onSelected.add(({ items, visible }) => {
-if(visible) {
-highlighter.highlightByID('select', items, true, true);
-}
+  if (visible) {
+    highlighter.highlightByID("select", items, true, true);
+  }
 });
 modelTree.onHovered.add(({ items, visible }) => {
-if(visible) {
-highlighter.highlightByID('hover', items);
-}
+  if (visible) {
+    highlighter.highlightByID("hover", items);
+  }
 });
 ```
+
 #### 🎨 Rendering the Fragment Tree
+
 ---
+
 Now, that all the setup is done we will add the **Fragment Tree** to the **[Toolbar](../api/classes/components.Toolbar)**.
 We will use the `addChild()` method to pass the Fragment Tree data to the **Toolbar**
 🎛️ Check **[Toolbar and UIManager](./UIManager.mdx)** tutorial if you have any doubts!
@@ -110,11 +135,9 @@ const toolbar = new OBC.Toolbar(components);
 toolbar.addChild(modelTree.uiElement.get("main"));
 components.ui.addToolbar(toolbar);
 ```
+
 **Cheers and Congratulations** 🎉 on completing this short yet powerful tutorial!
 Now, you can provide a structured, navigable, and user-friendly interface to manage, explore, and interact with your BIM models.🥁
 Let's keep it up and check out another tutorial! 🎓
 
-
-  <iframe src="https://thatopen.github.io/engine_components/src/fragments/FragmentTree/index.html"></iframe>
-
-  
+<iframe src="https://thatopen.github.io/engine_components/src/fragments/FragmentTree/index.html"></iframe>
