--- a/docs/Tutorials/PostproductionRenderer.mdx
+++ b/docs/Tutorials/PostproductionRenderer.mdx
@@ -1,5 +1,7 @@
 ### 🧪 Cool Post-Production Effects
+
 ---
+
 Post-production effects enrich your 3D scenes. There are several post-production effects, such as
 adding shadows, rendering outlines, adding ambient occlusion and applying bloom, that can enhance
 and make your scene look cool.🍹
@@ -7,8 +9,11 @@ and make your scene look cool.🍹
 👀 If you haven't started there, check out [that tutorial first](SimpleScene.mdx)!
 :::
 In this tutorial we will use **Post-Production Renderer** to add neat **Outlines** and **Ambient Occlusion** to the 3D Model.🦾
+
 ### 🏢 Adding Fragments
+
 ---
+
 We'll start by adding a **Fragment** to our scene using Fragment Manager.
 We'll use a simple fragment for the purposes of this tutorial, but the code is capable of handling big files as well.🏗️
 :::info Using Fragment Manager!
@@ -17,7 +22,7 @@ We'll use a simple fragment for the purposes of this tutorial, but the code is c
 
 ```js
 const fragments = new OBC.FragmentManager(components);
-const file = await fetch('../../../resources/small.frag');
+const file = await fetch("../../../resources/small.frag");
 const data = await file.arrayBuffer();
 const buffer = new Uint8Array(data);
 const model = await fragments.load(buffer);
@@ -25,19 +30,23 @@ const meshes = [];
 const culler = new OBC.ScreenCuller(components);
 culler.setup();
 for (const fragment of model.items) {
-meshes.push(fragment.mesh);
-culler.elements.add(fragment.mesh);
+  meshes.push(fragment.mesh);
+  culler.elements.add(fragment.mesh);
 }
 culler.elements.needsUpdate = true;
 const controls = components.camera.controls;
-controls.addEventListener('controlend', () => {
-culler.elements.needsUpdate = true;
+controls.addEventListener("controlend", () => {
+  culler.elements.needsUpdate = true;
 });
 ```
+
 ### 🎬 Activating the Post-Production
+
 ---
+
 We will activate the post-production effect.
 Also, we will enable the visibility for post-production layer.
+
 - `postproduction.active` - Enable or Disable the active status of the post-processing effect
 - `postproduction.visible` - Toggle the visibility of post-processing layer that is created to display the effect.
 
@@ -46,42 +55,81 @@ components.renderer.postproduction.enabled = true;
 const postproduction = components.renderer.postproduction;
 postproduction.customEffects.excludedMeshes.push(grid.get());
 const gui = new dat.GUI();
-gui.add(postproduction, 'enabled');
-const guiGamma = gui.addFolder('Gamma');
-guiGamma.add(postproduction.settings, 'gamma').name("Gamma correction").onChange((value) => {
-postproduction.setPasses({gamma: value});
-});
-const guiCustomEffects = gui.addFolder('Custom effects');
-guiCustomEffects.add(postproduction.settings, 'custom').name("Custom effects").onChange((value) => {
-postproduction.setPasses({custom: value});
-});
-guiCustomEffects.add(postproduction.customEffects, 'opacity').name('Line opacity').min(0).max(1).step(0.1);
-guiCustomEffects.add(postproduction.customEffects, 'tolerance').name('Line tolerance').min(0).max(6).step(1);
-guiCustomEffects.addColor(postproduction.customEffects, 'lineColor').name('Line color');
-guiCustomEffects.add(postproduction.customEffects, 'glossEnabled').name('Gloss enabled').min(0).max(2).step(0.1);
-guiCustomEffects.add(postproduction.customEffects, 'glossExponent').name('Gloss exponent').min(0).max(5).step(0.1);
-guiCustomEffects.add(postproduction.customEffects, 'maxGloss').name('Max gloss').min(-2).max(2).step(0.05);
-guiCustomEffects.add(postproduction.customEffects, 'minGloss').name('Min gloss').min(-2).max(2).step(0.05);
-const guiAO = gui.addFolder('SAO');
+gui.add(postproduction, "enabled");
+const guiGamma = gui.addFolder("Gamma");
+guiGamma
+  .add(postproduction.settings, "gamma")
+  .name("Gamma correction")
+  .onChange((value) => {
+    postproduction.setPasses({ gamma: value });
+  });
+const guiCustomEffects = gui.addFolder("Custom effects");
+guiCustomEffects
+  .add(postproduction.settings, "custom")
+  .name("Custom effects")
+  .onChange((value) => {
+    postproduction.setPasses({ custom: value });
+  });
+guiCustomEffects
+  .add(postproduction.customEffects, "opacity")
+  .name("Line opacity")
+  .min(0)
+  .max(1)
+  .step(0.1);
+guiCustomEffects
+  .add(postproduction.customEffects, "tolerance")
+  .name("Line tolerance")
+  .min(0)
+  .max(6)
+  .step(1);
+guiCustomEffects
+  .addColor(postproduction.customEffects, "lineColor")
+  .name("Line color");
+guiCustomEffects
+  .add(postproduction.customEffects, "glossEnabled")
+  .name("Gloss enabled")
+  .min(0)
+  .max(2)
+  .step(0.1);
+guiCustomEffects
+  .add(postproduction.customEffects, "glossExponent")
+  .name("Gloss exponent")
+  .min(0)
+  .max(5)
+  .step(0.1);
+guiCustomEffects
+  .add(postproduction.customEffects, "maxGloss")
+  .name("Max gloss")
+  .min(-2)
+  .max(2)
+  .step(0.05);
+guiCustomEffects
+  .add(postproduction.customEffects, "minGloss")
+  .name("Min gloss")
+  .min(-2)
+  .max(2)
+  .step(0.05);
+const guiAO = gui.addFolder("SAO");
 const configuration = postproduction._n8ao.configuration;
-guiAO.add(postproduction.settings, 'ao').name("Ambient occlusion").onChange((value) => {
-postproduction.setPasses({ao: value});
-});
-guiAO.add(configuration, 'aoSamples').step(1).min(1).max(16);
-guiAO.add(configuration, 'denoiseSamples').step(1).min(0).max(16);
-guiAO.add(configuration, 'denoiseRadius').step(1).min(0).max(100);
-guiAO.add(configuration, 'aoRadius').step(1).min(0).max(16);
-guiAO.add(configuration, 'distanceFalloff').step(1).min(0).max(16);
-guiAO.add(configuration, 'intensity').step(1).min(0).max(16);
-guiAO.add(configuration, 'halfRes');
-guiAO.add(configuration, 'screenSpaceRadius');
-guiAO.addColor(configuration, 'color');
+guiAO
+  .add(postproduction.settings, "ao")
+  .name("Ambient occlusion")
+  .onChange((value) => {
+    postproduction.setPasses({ ao: value });
+  });
+guiAO.add(configuration, "aoSamples").step(1).min(1).max(16);
+guiAO.add(configuration, "denoiseSamples").step(1).min(0).max(16);
+guiAO.add(configuration, "denoiseRadius").step(1).min(0).max(100);
+guiAO.add(configuration, "aoRadius").step(1).min(0).max(16);
+guiAO.add(configuration, "distanceFalloff").step(1).min(0).max(16);
+guiAO.add(configuration, "intensity").step(1).min(0).max(16);
+guiAO.add(configuration, "halfRes");
+guiAO.add(configuration, "screenSpaceRadius");
+guiAO.addColor(configuration, "color");
 ```
+
 **Congratulations** 🎉 on completing this tutorial! Now you know how to add cool effects easily using
 Post Production 🖼️
 Let's keep it up and check out another tutorial! 🎓
 
-
-  <iframe src="https://thatopen.github.io/engine_components/src/navigation/PostproductionRenderer/index.html"></iframe>
-
-  
+<iframe src="https://thatopen.github.io/engine_components/src/navigation/PostproductionRenderer/index.html"></iframe>
